Fixed CSS causing bookDisplay elements appearing unevenly, working on addBook function (doesn't work yet)

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 
 .libraryDisplay {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 200px 200px 200px 200px;
   grid-template-rows: 2fr 2fr 2fr;
   gap: 20px;
 }
@@ -22,7 +22,7 @@
   height: 300px;
   width: 200px;
   grid-template-rows: 3fr 2fr 1fr;
-  grid-template-columns: 1fr 8fr 1fr;
+  grid-template-columns: 50px 100px 50px;
 }
 
 .bookTitle {
@@ -50,7 +50,7 @@
   grid-row-start: 3;
   justify-self: start;
   align-self: end;
-  padding-left: 10px;
+  padding-left: 5px;
 }
 
 .bookRead {
@@ -59,5 +59,6 @@
   grid-row-start: 3;
   justify-self: end;
   align-self: end;
-  padding-right: 20px;
+  padding-right: 5px;
 }
+
